<resources>
    <string name="app_name">Tp-ApiRest</string>
    <string name="ingresar_usuario">Ingresar Usuario</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="ingresar_contraseña">Ingresar Contraseña</string>
    <string name="contraseña">Contraseña</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="terminos_condiciones">Términos y Condiciones</string>
    <string name="texto_terminos">En un lugar de la Mancha, de cuyo nombre no quiero acordarme, no ha mucho tiempo que vivía un hidalgo de los de lanza en astillero, adarga antigua, rocín flaco y galgo corredor. Una olla de algo más vaca que carnero, salpicón las más noches, duelos y quebrantos los sábados, lentejas los viernes, algún palomino de añadidura los domingos, consumían las tres partes de su hacienda; el resto della se envolvía en un sayo de velarte, calzas de velludo y pantuflos de lo mismo para las fiestas, entre los cuales días se arrosaba los de más con sus propios calzones que de los mismos de sus veces eran.\nTenía en su casa una ama que pasaba de los cuarenta años, y una sobrina que no llegaba a los veinte, y un mozo de campo y plaza, que así ensillaba el rocín como tomaba la podadera. Frisaba la edad de nuestro hidalgo con los cincuenta años; era de complexión recia, seco de carnes, enjuto de rostro, y en extremo madrugador y amigo de sus mañanas. Quieren decir que tenía el sobrenombre de la Quijada o de Quesada (que en esto hay alguna diferencia en los autores que deste caso escriben), aunque por conjeturas verosímiles se deja entender que el nombre era Quesada; pero esto importa poco a la resolución de nuestro cuento; basta que en la narración dél no se salga un punto de la verdad.\nEs, pues, de saber, que este sobredicho hidalgo, los ratos que estaba ocioso —que eran los más del año—, se daba a leer libros de caballerías con tanta afición y gusto, que olvidó casi del todo el ejercicio de la caza, y aun la administración de su hacienda; y metiose tanto en ello, que creyó firmemente que era verdad todo lo que en ellos se contaba; y así, se le secó el celebro de manera que vino a perder el juicio.\nY así, él se enfrascó tanto en su lectura, que se le pasaban las noches leyendo de claro en claro, y los días de turbio en turbio; y así, del poco dormir y del mucho leer se le secó el celebro, de manera que vino a perder el juicio.\nLlenósele la fantasía de todo aquello que en los libros leía: de encantamentos, de batallas, de desafíos, de heridas, de amores, de lamentos y de imposibles, y de otras importunas fantasías, que se le estribaban tan bien en la imaginación que, a su parecer, la más alta verdad y la más cierta cosa del mundo era todo lo que de aquellas azañas leía.\nEn efecto, rematado ya su juicio, vino a dar en el más extraño pensamiento que jamás dio loco en el mundo; y fue que le pareció convenible y necesario, así para el aumento de su honra como para el servicio de su república, hacerse caballero andante, y salir por todas las partes del mundo con sus armas y caballo a buscar aventuras, y a hacer en ellas, y por ellas, cuanto en su pro y en favor de los menesterosos hiciese, trayendo a efecto todo aquello que había leído, que le daba ocasión y el crédito que tanto se le ponía a la orden de caballería.</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="reproducir">REPRODUCIR</string>
    <string name="titulo">"Título: "</string>
    <string name="autor">"Autor: "</string>
    <string name="duracion">"Duración: "</string>
    <string name="fecha_lanzamiento">"Lanzamiento: "</string>
    <string name="dezero">"DeZero"</string>
    <string name="login">: Login</string>
    <string name="terms">: Terms and conditions</string>
    <string name="details">Details</string>
    <string name="boton_cerrar_sesion">Cerrar sesión</string>
    <string name="nombre">NOMBRE</string>
    <string name="password">PASSWORD</string>
    <string name="userid">USERID</string>
    <string name="sp_credenciales">SHARED_PREFERENCES</string>
    <string name="canciones">CANCIONES</string>
    <string name="albumes">ALBUMES</string>
    <string name="artistas">ARTISTAS</string>
    <string name="buscar">BUSCAR</string>
    <string name="image">imagen</string>
    <string name="image_action">imagenAccion</string>
    <string name="tracks">Tracks</string>
    <string name="albums">Albums</string>
    <string name="album">Album</string>
    <string name="artists">Artists</string>
    <string name="mas_sobre">Más sobre</string>
    <string name="ganancia">"Gain: "</string>
    <string name="ranking">Ranking:</string>
    <string name="trackNumero">Track N°</string>
    <string name="favoritos">Favoritos</string>
    <string name="ver_favoritos">Ver favoritos</string>
    <string name="track">Track</string>
    <string name="generos">Géneros:</string>
    <string name="discografica">Discográfica:</string>
    <string name="fans">Fans:</string>
    <string name="toptracks">TOP TRACKS</string>
    <string name="artist">Artist</string>
    <string name="textView">TextView</string>
    <string name="funcionRU">Función recordar usuario</string>
    <string name="resultados">"Buscar: "</string>
    <string name="pistaBuscar">Buscar canción, álbum o artista...</string>

</resources>