<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:text="@string/ingresar_usuario"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_de_usuario"
        android:inputType="text"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:text="@string/ingresar_contraseña"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/cbRecordarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/recordar_usuario"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.5"
            android:text="@string/iniciar_sesion" />

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:layout_marginStart="5dp"
            android:layout_weight="0.5"
            android:text="@string/registrarse" />

    </LinearLayout>

</LinearLayout>