<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@drawable/item_background"
    android:layout_margin="3dp">

    <ImageView
        android:id="@+id/imgCover"
        android:src="@drawable/placeholder"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:padding="1dp"
        android:cropToPadding="true"
        android:layout_marginRight="15dp"
        android:layout_weight="0"
        android:background="@drawable/img_borde"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        tools:ignore="ImageContrastCheck"
        android:layout_gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop = "6dp">

            <TextView
                android:id="@+id/tvAutor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/textView"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvDuracion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/textView"
                android:textSize="15sp"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgFavorito"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_weight="0"
        android:contentDescription="@string/image_action"
        tools:ignore="ImageContrastCheck" />
</LinearLayout>