<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/primary_toolbar">
    </include>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgFotoArtista"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            app:civ_border_color="@color/amarillo"
            android:src="@drawable/placeholder" />

        <TextView
            android:id="@+id/tvNombreArtista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="12dp" />


        <TextView
            android:id="@+id/tvSeguidores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="18dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/menu"
            android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/albumes"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:paddingVertical="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAlbumes"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/items"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_album"/>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="18dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/menu"
            android:orientation="vertical">

            <!-- Tracks populares -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toptracks"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingVertical="8dp"
                android:gravity="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopTracks"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/items"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_track"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>

</LinearLayout>
