<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/primary_toolbar">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_tv"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/canciones"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTracks"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/bg_rv"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_track" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/bg_tv"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/albumes"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAlbums"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/bg_rv"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_album" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp"
                android:background="@drawable/bg_tv"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/artistas"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvArtists"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/bg_rv"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_artist" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>